--- a/P007123.opf/layers/v001/Pagination.yml
+++ b/P007123.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: c1b46670588d4bad81de5716c1153131
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   df3b60d3d86b4396ad8763da9f1618da:
